Add style changes in buttons and selects

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 Chile
             </h1>
 
-            <button class="button button--medium button--positive">
+            <button class="button button--large button--positive">
                 Más destinos
             </button>
         </div>
@@ -73,7 +73,7 @@
             </div>
 
             <div class="search__actions">
-                <button class="button button--large button--default">
+                <button class="button button--medium button--default">
                     Buscar
                 </button>
             </div>
